# CardGame

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.augment/rules/: rule.md
.github/workflows/: msbuild.yml
Classes/: AppDelegate.cpp  GameScene.cpp  GameScene.h
Classes/configs/loaders/: ConfigManager.cpp  ConfigManager.h  LevelConfigLoader.cpp  LevelConfigLoader.h
Classes/configs/models/: AnimationConfig.cpp  AnimationConfig.h  CardLayoutConfig.cpp  FontConfig.cpp  (+10 more)
Classes/controllers/: BaseController.cpp  BaseController.h  GameController.cpp  GameController.h  PlayFieldController.cpp  PlayFieldController.h  StackController.cpp  StackController.h  UndoController.cpp  UndoController.h
Classes/managers/: ConfigManager.h  UndoManager.cpp  UndoManager.h
Classes/models/: CardModel.cpp  CardModel.h  GameModel.cpp  GameModel.h  UndoModel.cpp  UndoModel.h
Classes/services/: GameModelFromLevelGenerator.cpp  GameModelFromLevelGenerator.h
Classes/utils/: ZOrderManager.h
Classes/views/: CardView.cpp  CardView.h  GameView.cpp  GameView.h
cocos2d/: .appveyor.yml  CMakeLists.txt
cocos2d/cocos/: CMakeLists.txt
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.ohos/: build-profile.json5
proj.ohos/AppScope/: app.json5
proj.ohos/entry/: build-profile.json5
proj.ohos/entry/src/main/cpp/: CMakeLists.txt
proj.ohos/entry/src/main/cpp/types/libentry/: index.d.ts
proj.ohos/libSysCapabilities/: oh-package.json5
proj.win32/: CardGame.vcxproj  CardGame.vcxproj.filters  game.aps
(+67 files in other folders)
